# nd-super-nodes

./: .comfyignore  .copilotignore  .gitattributes  .gitignore  COMPREHENSIVE_COMFYUI_NODE_DEV_GUIDE.md  LICENSE  README.md  __init__.py  pyproject.toml  release.ps1  update.ps1  update.sh  version.json
.github/: copilot-instructions.md
.github/workflows/: publish_action.yml
backend/: __init__.py  civitai_service.py  lora_utils.py  nd_super_lora_node.py  nd_super_prompt_node.py  prompt_manager.py  super_lora_node.py  template_manager.py  test_text_node.py  version_utils.py  web_api.py
docs/: COMPREHENSIVE_COMFYUI_NODE_DEV_GUIDE.md  ENHANCED_UI_FEATURE_GUIDE.md  NODES_2_MIGRATION.md  development.md  triggers-outptut-fix.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: extension.ts
frontend/src/components/: LoraRow.vue  SuperLoraNodeView.vue  TagHeader.vue  index.ts  shims-vue.d.ts
frontend/src/extensions/: NodeEnhancer.ts  NodeEnhancerExtension.ts
frontend/src/nodes/: SuperLoraNode.ts
frontend/src/services/: CivitAiService.ts  FilePickerService.ts  LoraService.ts  OverlayService.ts  PromptService.ts  TagSetService.ts  TemplateService.ts  TriggerWordStore.ts  UpdateService.ts
frontend/src/styles/: super-lora.scss  variables.scss
frontend/src/types/: comfyui.d.ts  index.ts
nd_super_nodes/: nd_super_nodes_update_cache.json
tests/: test_lora_utils.py
web/: extension.js  extension.js.map  style.css  style2.css
web/assets/: SuperLoraNodeView-ER6v5Q3t.js  SuperLoraNodeView-ER6v5Q3t.js.map
(+14 files in other folders)
