[project]
name = "nd-super-nodes"
description = "Super LoRA Loader and ND Super Selector overlays for ComfyUI."
version = "1.5.1"
license = {file = "LICENSE"}
dependencies = [
	"aiohttp>=3.8.0"
]

[project.urls]
Repository = "https://github.com/HenkDz/nd-super-nodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "nour"
DisplayName = "nd-super-nodes"
Icon = "https://raw.githubusercontent.com/HenkDz/nd-super-nodes/refs/heads/main/icon.png"
includes = []
